@@ -209,3 +209,4 @@ Revision	Log Message
 205		Estimate tolls
 206		Determine if provinces are on the same continent as the owner's capital
 207		Determine if provinces are land connected to capital
+208		Taxes and tolls take into account distance overseas
